update fonts, tagline

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -10,20 +10,20 @@
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href='static/homepage/apple-touch-icon.png'>
-        <link rel="icon" type="image/png" sizes="32x32" href='static/homepage/favicon-32x32.png'>
-        <link rel="icon" type="image/png" sizes="16x16" href='static/homepage/favicon-16x16.png'>
+        <link rel="apple-touch-icon" sizes="180x180" href='static/homepage/apple-touch-icon.png?v=2'>
+        <link rel="icon" type="image/png" sizes="32x32" href='static/homepage/favicon-32x32.png?v=2'>
+        <link rel="icon" type="image/png" sizes="16x16" href='static/homepage/favicon-16x16.png?v=2'>
         <link rel="manifest" href='static/homepage/site.webmanifest'>
 
         <!--
         This favicon was generated using the following graphics from Twitter Twemoji:
 
-        - Graphics Title: 1f5fa.svg
+        - Graphics Title: 1f4a1.svg
         - Graphics Author: Copyright 2020 Twitter, Inc and other contributors (https://github.com/twitter/twemoji)
-        - Graphics Source: https://github.com/twitter/twemoji/blob/master/assets/svg/1f5fa.svg
+        - Graphics Source: https://github.com/twitter/twemoji/blob/master/assets/svg/1f4a1.svg
         - Graphics License: CC-BY 4.0 (https://creativecommons.org/licenses/by/4.0/)
         -->
 
@@ -32,14 +32,17 @@
     <body>
         <div class="container-lg">
             <div class="row" style="margin-top: 5rem;">
-                <div class="col-md-2 gx-5">
+                <div class="col-md-3 gx-5">
                     <img alt="Carter Zenke profile picture" class="img-fluid mb-4" src="static/homepage/carter-zenke-800-800.jpg" style="border-radius: 50%;" width="80" height="80">
                 </div>
-                <div class="col-md-10 gx-5">
+                <div class="col-md-6 gx-5">
                     <div class="row mb-4">
                         <div class="col">
                             <h2 style="font-weight: 600">Carter Zenke</h2>
-                            <p class="d-inline">Computer science for everyone.</p>
+                            <p class="tagline">I teach computer science at <a href="https://www.harvard.edu/">Harvard University</a>, where I serve as the Preceptor for <a href="https://cs50.harvard.edu/">CS50</a>. I recently created CS50's open <a href="https://cs50.harvard.edu/sql">Introduction to Databases with SQL</a>, also taught at Harvard Extension School.</p>
+                            <p class="d-inline tagline">👋 Contact me at <a href="mailto:carter@cs50.harvard.edu">carter@cs50.harvard.edu</a>.</p>
+                            <a href="https://www.linkedin.com/in/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-linkedin" style="font-family:'FontAwesome'"></span></a>
+                            <a href="https://github.com/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-github" style="font-family:'FontAwesome'"></span></a>
                         </div>
                     </div>
                     <div class="row mb-4">
