--- a/static/homepage/styles.css
+++ b/static/homepage/styles.css
@@ -3,12 +3,28 @@ body {
 }
 
 a {
-    text-decoration: none;
     color: black;
 }
 
+a.icon {
+    text-decoration: none;
+}
+
+code {
+    font-family: 'DM Mono', monospace;
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0.03);
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 2px;
+    color: #c25;
+    font-size: 0.8rem;
+    padding: 0.08rem 0.2rem;
+    white-space: normal;
+}
+
 a:hover {
-    color: #444;
+    color: #555;
+    text-decoration: none;
 }
 
 .nav-link {
@@ -52,4 +68,13 @@ img {
     height: 0;
     padding: 0% 0% 56.25%; /* 16:9 ratio */
     overflow: hidden;
+}
+
+p {
+    font-family: 'DM Mono', monospace;
+    font-weight: 400;
+}
+
+p.tagline {
+    font-family: 'Inter', sans-serif;
 }
