update tagline, file structure

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -6,17 +6,17 @@
         <meta name="description" content="Homepage of Carter Zenke.">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link href="static/homepage/styles.css" rel="stylesheet">
+        <link href="static/homepage/css/styles.css" rel="stylesheet">
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href='static/homepage/apple-touch-icon.png?v=2'>
-        <link rel="icon" type="image/png" sizes="32x32" href='static/homepage/favicon-32x32.png?v=2'>
-        <link rel="icon" type="image/png" sizes="16x16" href='static/homepage/favicon-16x16.png?v=2'>
-        <link rel="manifest" href='static/homepage/site.webmanifest'>
+        <link rel="apple-touch-icon" sizes="180x180" href='static/homepage/favicon/apple-touch-icon.png?v=2'>
+        <link rel="icon" type="image/png" sizes="32x32" href='static/homepage/favicon/favicon-32x32.png?v=2'>
+        <link rel="icon" type="image/png" sizes="16x16" href='static/homepage/favicon/favicon-16x16.png?v=2'>
+        <link rel="manifest" href='static/homepage/favicon/site.webmanifest'>
 
         <!--
         This favicon was generated using the following graphics from Twitter Twemoji:
@@ -27,19 +27,28 @@
         - Graphics License: CC-BY 4.0 (https://creativecommons.org/licenses/by/4.0/)
         -->
 
+        <!-- Font Awesome -->
+        <script src="https://kit.fontawesome.com/36b4b9bdc4.js" crossorigin="anonymous"></script>
+
         <title>Carter Zenke | {{ page.title }}</title>
     </head>
+
+    <!-- Mixpanel -->
+    <script type="text/javascript">
+    (function(f,b){if(!b.__SV){var e,g,i,h;window.mixpanel=b;b._i=[];b.init=function(e,f,c){function g(a,d){var b=d.split(".");2==b.length&&(a=a[b[0]],d=b[1]);a[d]=function(){a.push([d].concat(Array.prototype.slice.call(arguments,0)))}}var a=b;"undefined"!==typeof c?a=b[c]=[]:c="mixpanel";a.people=a.people||[];a.toString=function(a){var d="mixpanel";"mixpanel"!==c&&(d+="."+c);a||(d+=" (stub)");return d};a.people.toString=function(){return a.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
+    for(h=0;h<i.length;h++)g(a,i[h]);var j="set set_once union unset remove delete".split(" ");a.get_group=function(){function b(c){d[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));a.push([e,call2])}}for(var d={},e=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<j.length;c++)b(j[c]);return d};b._i.push([e,f,c])};b.__SV=1.2;e=f.createElement("script");e.type="text/javascript";e.async=!0;e.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===f.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";g=f.getElementsByTagName("script")[0];g.parentNode.insertBefore(e,g)}})(document,window.mixpanel||[]);
+    </script>
     <body>
         <div class="container-lg">
             <div class="row" style="margin-top: 5rem;">
                 <div class="col-md-3 gx-5">
-                    <img alt="Carter Zenke profile picture" class="img-fluid mb-4" src="static/homepage/carter-zenke-800-800.jpg" style="border-radius: 50%;" width="80" height="80">
+                    <img alt="Carter Zenke profile picture" class="img-fluid mb-4" src="static/homepage/img/carter-zenke-800-800.jpg" style="border-radius: 50%;" width="80" height="80">
                 </div>
                 <div class="col-md-6 gx-5">
                     <div class="row mb-4">
                         <div class="col">
                             <h2 style="font-weight: 600">Carter Zenke</h2>
-                            <p class="tagline">I teach computer science at <a href="https://www.harvard.edu/">Harvard University</a>, where I serve as the Preceptor for <a href="https://cs50.harvard.edu/">CS50</a>. I recently created CS50's open <a href="https://cs50.harvard.edu/sql">Introduction to Databases with SQL</a>, also taught at Harvard Extension School.</p>
+                            <p class="tagline">I teach as a Senior Instructor ("Preceptor") in Computer Science at <a href="https://www.harvard.edu/">Harvard University</a>. As academic head of <a href="https://cs50.harvard.edu/">CS50</a>, I oversee educational productions and operations for CS50's 4M+ students, online and on-campus. With CS50's team of producers, I recently created our <a href="https://cs50.harvard.edu/sql">Introduction to Databases with SQL</a>, freely available online.</p>
                             <p class="d-inline tagline">👋 Contact me at <a href="mailto:carter@cs50.harvard.edu">carter@cs50.harvard.edu</a>.</p>
                             <a href="https://www.linkedin.com/in/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-linkedin" style="font-family:'FontAwesome'"></span></a>
                             <a href="https://github.com/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-github" style="font-family:'FontAwesome'"></span></a>
@@ -62,6 +71,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="static/homepage/js/mixpanel.js"></script>
 </html>
