--- a/static/homepage/css/styles.css
+++ b/static/homepage/css/styles.css
@@ -6,6 +6,10 @@ a {
     color: black;
 }
 
+[data-bs-theme=dark] a {
+    color: white;
+}
+
 a.icon {
     text-decoration: none;
 }
@@ -32,7 +36,11 @@ a:hover {
 }
 
 .active {
-    color: #404664 !important;
+    color: black !important;
+}
+
+[data-bs-theme=dark] a {
+    color: white !important;
 }
 
 .card .active {
