--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -48,7 +48,7 @@
                     <div class="row mb-4">
                         <div class="col">
                             <h2 style="font-weight: 600">Carter Zenke</h2>
-                            <p class="tagline">I teach as a Senior Instructor ("Preceptor") in Computer Science at <a href="https://www.harvard.edu/">Harvard University</a>. As academic head of <a href="https://cs50.harvard.edu/">CS50</a>, I oversee educational productions and operations for CS50's 4M+ students, online and on-campus. With CS50's team of producers, I recently created our <a href="https://cs50.harvard.edu/sql">Introduction to Databases with SQL</a>, freely available online.</p>
+                            <p class="tagline">I teach as a Senior Instructor in Computer Science at <a href="https://www.harvard.edu/">Harvard University</a>. As academic head of <a href="https://cs50.harvard.edu/">CS50</a>, I oversee educational productions and operations for CS50's 4M+ students, online and on-campus. With CS50's team of producers, I recently created our <a href="https://cs50.harvard.edu/sql">Introduction to Databases with SQL</a>, freely available online.</p>
                             <p class="d-inline tagline">👋 Contact me at <a href="mailto:carter@cs50.harvard.edu">carter@cs50.harvard.edu</a>.</p>
                             <a href="https://www.linkedin.com/in/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-linkedin" style="font-family:'FontAwesome'"></span></a>
                             <a href="https://github.com/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-github" style="font-family:'FontAwesome'"></span></a>
@@ -59,7 +59,7 @@
                             <ul class="nav nav-tabs">
                                 {% for item in site.data.navigation %}
                                 <li class="nav-item">
-                                    <a class="nav-link {% if page.url ==  item.link %}active{% endif %}" aria-current="page" href="{{ item.link }}">
+                                    <a class="nav-link {% if page.url == item.link %}active{% endif %}" aria-current="page" href="{{ item.link }}">
                                         {{ item.name }}
                                     </a>
                                 </li>
