Update photo, courses page

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -42,7 +42,7 @@
         <div class="container-lg">
             <div class="row" style="margin-top: 5rem;">
                 <div class="col-md-3 gx-5">
-                    <img alt="Carter Zenke profile picture" class="img-fluid mb-4" src="static/homepage/img/carter-zenke-800-800.jpg" style="border-radius: 50%;" width="80" height="80">
+                    <img alt="Carter Zenke profile picture" class="img-fluid mb-4" src="static/homepage/img/carter-zenke-500-500.jpg" style="border-radius: 50%;" width="125" height="125">
                 </div>
                 <div class="col-md-6 gx-5">
                     <div class="row mb-4">
@@ -53,6 +53,7 @@
                             <p class="d-inline tagline">👋 Contact me at <a href="mailto:carter@cs50.harvard.edu">carter@cs50.harvard.edu</a>.</p>
                             <a href="https://www.linkedin.com/in/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-linkedin" style="font-family:'FontAwesome'"></span></a>
                             <a href="https://github.com/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-github" style="font-family:'FontAwesome'"></span></a>
+                            <p>📸 Photography by Andrew Markham</p>
                         </div>
                     </div>
                     <div class="row mb-4">
