--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -6,17 +6,21 @@
         <meta name="description" content="Homepage of Carter Zenke.">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link href="static/homepage/css/styles.css" rel="stylesheet">
+        <link href="/static/homepage/css/styles.css" rel="stylesheet">
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href='static/homepage/favicon/apple-touch-icon.png?v=2'>
-        <link rel="icon" type="image/png" sizes="32x32" href='static/homepage/favicon/favicon-32x32.png?v=2'>
-        <link rel="icon" type="image/png" sizes="16x16" href='static/homepage/favicon/favicon-16x16.png?v=2'>
-        <link rel="manifest" href='static/homepage/favicon/site.webmanifest'>
+        <link rel="apple-touch-icon" sizes="180x180" href='/static/homepage/favicon/apple-touch-icon.png?v=2'>
+        <link rel="icon" type="image/png" sizes="32x32" href='/static/homepage/favicon/favicon-32x32.png?v=2'>
+        <link rel="icon" type="image/png" sizes="16x16" href='/static/homepage/favicon/favicon-16x16.png?v=2'>
+        <link rel="manifest" href='/static/homepage/favicon/site.webmanifest'>
+        
+        <!-- Mermaid -->
+        <script src="https://cdn.jsdelivr.net/npm/mermaid@10.9.0/dist/mermaid.min.js"></script>
+        <script>mermaid.initialize({startOnLoad:true});</script>
 
         <!--
         This favicon was generated using the following graphics from Twitter Twemoji:
@@ -42,7 +46,7 @@
         <div class="container-lg">
             <div class="row" style="margin-top: 5rem;">
                 <div class="col-md-3 gx-5">
-                    <img alt="Carter Zenke profile picture" class="img-fluid mb-4" src="static/homepage/img/carter-zenke-500-500.jpg" style="border-radius: 50%;" width="125" height="125">
+                    <img alt="Carter Zenke profile picture" class="img-fluid mb-4" src="/static/homepage/img/carter-zenke-500-500.jpg" style="border-radius: 50%;" width="125" height="125">
                 </div>
                 <div class="col-md-6 gx-5">
                     <div class="row mb-4">
@@ -61,7 +65,7 @@
                             <ul class="nav nav-tabs">
                                 {% for item in site.data.navigation %}
                                 <li class="nav-item">
-                                    <a class="nav-link {% if page.url == item.link %}active{% endif %}" aria-current="page" href="{{ item.link }}">
+                                    <a class="nav-link {% if item.link == '/' and page.url == item.link %}active{% elsif item.link != '/' and page.url contains item.link %}active{% endif %}" aria-current="page" href="{{ item.link }}">
                                         {{ item.name }}
                                     </a>
                                 </li>
@@ -75,5 +79,5 @@
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="static/homepage/js/mixpanel.js"></script>
+    <script src="/static/homepage/js/mixpanel.js"></script>
 </html>
