--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -52,9 +52,9 @@
                     <div class="row mb-4">
                         <div class="col">
                             <h2 style="font-weight: 600">Carter Zenke</h2>
-                            <p class="tagline">I work at <a href="https://www.helloworldcs.org/" target="_blank">Hello World CS</a>, creating engaging computer science learning experiences for K–12 students and teachers.</p>
+                            <p class="tagline">I create engaging computer science learning experiences for K–12 students and teachers at <a href="https://www.helloworldcs.org/" target="_blank">Hello World CS</a>.</p>
                             <p>I previously taught at <a href="https://www.harvard.edu/" target="_blank">Harvard</a>, where I oversaw educational productions and teaching operations for CS50's 5M+ students, online and on-campus.</p>
-                            <p class="d-inline tagline">👋 Contact me at <a href="mailto:carter@helloworldcs.org">carter@helloworldcs.org</a>.</p>
+                            <p class="d-inline tagline">📧 Contact me at <a href="mailto:carter@helloworldcs.org">carter@helloworldcs.org</a>.</p>
                             <a href="https://www.linkedin.com/in/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-linkedin" style="font-family:'FontAwesome'"></span></a>
                             <a href="https://github.com/carterzenke" class="icon" target="_blank"><span class="fa-brands fa-github" style="font-family:'FontAwesome'"></span></a>
                             <p>📸 Photography by Andrew Markham</p>
